Restrict geo-flags to certain regions

--- a/StewardClient/src/app/pages/tools/pages/ugc-details/pages/woodstock-lookup/woodstock-lookup.component.html
+++ b/StewardClient/src/app/pages/tools/pages/ugc-details/pages/woodstock-lookup/woodstock-lookup.component.html
@@ -90,6 +90,7 @@
 
       <toggle-list-ez
         [contract]="geoFlagsToggleListEzContract"
+        [disabled]="canChangeGeoFlags"
         (afterSubmitted)="updateGeoFlagsModel($event)"
       >
         <help-popover-icon cardTitle="Geo Flags" confluenceName="Geo Flags Card">
