--- a/StewardClient/src/app/sidebars/changelog/changelog-tag-details/changelog-tag-details.component.html
+++ b/StewardClient/src/app/sidebars/changelog/changelog-tag-details/changelog-tag-details.component.html
@@ -6,7 +6,11 @@
     chip.title
   }}</mat-chip> -->
   <mat-chip clickStop>
-    <span class="title" *ngFor="let chip of titleChips" [matTooltip]="chip.tooltip">{{chip.title}}</span>
-    <span *ngFor="let chip of tagOrToolChips" [class]="chip.type" [matTooltip]="chip.tooltip">{{chip.title}}</span>
+    <span class="title" *ngFor="let chip of titleChips" [matTooltip]="chip.tooltip">{{
+      chip.title
+    }}</span>
+    <span *ngFor="let chip of tagOrToolChips" [class]="chip.type" [matTooltip]="chip.tooltip">{{
+      chip.title
+    }}</span>
   </mat-chip>
 </mat-chip-list>
