--- a/StewardClient/src/app/sidebars/changelog/changelog.component.html
+++ b/StewardClient/src/app/sidebars/changelog/changelog.component.html
@@ -26,10 +26,20 @@
     <button mat-mini-fab color="warn" (click)="resetAll()">
       <mat-icon matTooltip="Reset">refresh</mat-icon>
     </button>
-    <button *ngIf="anyOpened" mat-icon-button (click)="closeAll()" matTooltip="Collapse all extended descriptions">
+    <button
+      *ngIf="anyOpened"
+      mat-icon-button
+      (click)="closeAll()"
+      matTooltip="Collapse all extended descriptions"
+    >
       <mat-icon>expand_more</mat-icon>
     </button>
-    <button *ngIf="!anyOpened" mat-icon-button (click)="openAll()" matTooltip="Expand all extended descriptions">
+    <button
+      *ngIf="!anyOpened"
+      mat-icon-button
+      (click)="openAll()"
+      matTooltip="Expand all extended descriptions"
+    >
       <mat-icon>expand_less</mat-icon>
     </button>
   </h2>
