--- a/StewardClient/src/styles/mixins/variables/sizes.scss
+++ b/StewardClient/src/styles/mixins/variables/sizes.scss
@@ -12,6 +12,8 @@ $mat-icon-width: 32px;
 $mat-icon-height: 32px;
 $mat-icon-line-height: 32px;
 
+$mat-expando-collapsed-height: 48px;
+
 $auction-row-height: 120px;
 $ugc-row-height-thumbnails: 200px;
 $max-table-image-width: 150px;
