--- a/StewardClient/src/app/sidebars/changelog/changelog-group/changelog-group.component.scss
+++ b/StewardClient/src/app/sidebars/changelog/changelog-group/changelog-group.component.scss
@@ -6,7 +6,7 @@
   }
 
   .mat-expanded {
-    height: 48px; // value is sourced from the default .mat-expanded height. normally this rule would override it with 96px, which we do not want here
+    height: $mat-expando-collapsed-height; // value is sourced from the default .mat-expanded height. normally this rule would override it with 96px, which we do not want here
   }
 
   mat-checkbox {
