--- a/StewardClient/src/app/pages/tools/pages/notifications/components/notification-management/localized-individual-notification-management/localized-individual-notification-management.component.scss
+++ b/StewardClient/src/app/pages/tools/pages/notifications/components/notification-management/localized-individual-notification-management/localized-individual-notification-management.component.scss
@@ -61,7 +61,7 @@ mat-form-field {
 
   &.device-type,
   &.expiry-date {
-    width: $metadataWidth;
+    min-width: $metadataWidth;
   }
 
   textarea {
