--- a/StewardClient/src/app/pages/tools/pages/notifications/components/notification-management/group-notification-management/group-notification-management.component.html
+++ b/StewardClient/src/app/pages/tools/pages/notifications/components/notification-management/group-notification-management/group-notification-management.component.html
@@ -65,6 +65,12 @@
                 </td>
               </tr>
               <tr *ngIf="!entry.edit">
+                <th>Device Type:</th>
+                <td>
+                  {{ entry.formGroup.controls.deviceType.value | deppoh }}
+                </td>
+              </tr>
+              <tr *ngIf="!entry.edit">
                 <th>Expire Date:</th>
                 <td>
                   <standard-absolute-time-utc
@@ -81,6 +87,16 @@
                 [min]="entry.min"
                 [formControl]="entry.formControls.expireDateUtc"
               ></datetime-picker>
+            </ng-container>
+            <ng-container *ngIf="entry.edit">
+              <mat-form-field appearance="fill" class="device-type">
+                <mat-label>Device Type</mat-label>
+                <mat-select [formControl]="entry.formControls.deviceType">
+                  <mat-option *ngFor="let type of deviceTypes" [value]="type">
+                    {{ type | deppoh }}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
             </ng-container>
           </td>
         </ng-container>
