--- a/StewardClient/src/app/pages/tools/pages/notifications/components/notification-management/localized-individual-notification-management/localized-individual-notification-management.component.html
+++ b/StewardClient/src/app/pages/tools/pages/notifications/components/notification-management/localized-individual-notification-management/localized-individual-notification-management.component.html
@@ -15,29 +15,22 @@
           <th mat-header-cell *matHeaderCellDef>Message</th>
           <td mat-cell *matCellDef="let entry" [formGroup]="entry.formGroup">
             <div class="message" *ngIf="!entry.edit">
-              <span *ngIf="entry.isCommunityMessage"
-                >{{ entry.formGroup.controls.message.value }}
+              <span *ngIf="entry.isEditable"
+                >{{ entry.notification.message }}
               </span>
-              <span class="warn" *ngIf="!entry.isCommunityMessage">
+              <span class="warn" *ngIf="!entry.isEditable">
                 No message for notifications of type:
                 {{ entry.notification.notificationType }}
               </span>
             </div>
-            <mat-form-field *ngIf="entry.edit" appearance="fill" class="message">
-              <mat-label
-                >Message {{ entry.formGroup.controls.message.value.length }}/{{
-                  messageMaxLength
-                }}</mat-label
-              >
-              <textarea
-                matInput
-                [formControl]="entry.formControls.message"
-                cdkTextareaAutosize
-                placeholder="Community Message"
-                type="text"
-                required
-              ></textarea>
-            </mat-form-field>
+            <div class="message" *ngIf="entry.edit">
+              <select-localized-string
+                *ngIf="entry.edit"
+                [service]="service?.selectLocalizedStringService"
+                [formControl]="entry.formControls.localizedMessageInfo"
+                [disableLanguagePreview]="true"
+              ></select-localized-string>
+            </div>
           </td>
         </ng-container>
 
@@ -99,7 +92,7 @@
                 class="edit"
                 mat-raised-button
                 color="primary"
-                [disabled]="!entry.isCommunityMessage"
+                [disabled]="!entry.isEditable"
                 (click)="editEntry(entry)"
               >
                 <span [matTooltip]="entry.tooltip">Edit</span>
