--- a/StewardClient/src/app/shared/modules/endpoints/endpoints-nav-tool/endpoints-nav-tool.component.scss
+++ b/StewardClient/src/app/shared/modules/endpoints/endpoints-nav-tool/endpoints-nav-tool.component.scss
@@ -24,13 +24,21 @@
     margin: .5px;
     width: 5px;
     height: 5px;
-    background-color: gray;
+    background-color: #fff5;
+
+    &.spacer {
+      background-color: #0000;
+    }
 
     &.active {
       background-color: white;
 
       &.retail {
         background-color: lime;
+      }
+
+      &.flight {
+        background-color: cyan;
       }
     }
   }
