--- a/StewardClient/src/styles/global/steward-layout/standard-form.scss
+++ b/StewardClient/src/styles/global/steward-layout/standard-form.scss
@@ -160,3 +160,7 @@ textarea.sf-standard-height {
   min-height: $text-area-medium-height;
   max-height: $text-area-max-height;
 }
+
+.sf-tooltip-multiline {
+  white-space: pre-line;
+}
