--- a/StewardClient/src/app/pages/tools/pages/notifications/components/notification-management/individual-notification-management/individual-notification-management.component.html
+++ b/StewardClient/src/app/pages/tools/pages/notifications/components/notification-management/individual-notification-management/individual-notification-management.component.html
@@ -46,32 +46,32 @@
           <td mat-cell *matCellDef="let entry" [formGroup]="entry.formGroup">
             <table class="info-table">
               <tr>
-                <th>ID:</th>
+                <th>ID</th>
                 <td>
                   {{ entry.notification.notificationId }}
                 </td>
               </tr>
               <tr>
-                <th>Type:</th>
+                <th>Type</th>
                 <td>
                   {{ entry.notification.notificationType }}
                 </td>
               </tr>
               <tr>
-                <th>Is Read:</th>
+                <th>Is Read</th>
                 <td>
                   {{ entry.notification.isRead }}
                 </td>
               </tr>
               <tr>
-                <th>Sent Date:</th>
+                <th>Sent Date</th>
                 <td>
                   <standard-absolute-time-utc [timeUtc]="entry.notification.sentDateUtc">
                   </standard-absolute-time-utc>
                 </td>
               </tr>
               <tr *ngIf="!entry.edit">
-                <th>Expire Date:</th>
+                <th>Expire Date</th>
                 <td>
                   <standard-absolute-time-utc
                     *ngIf="!entry.edit"
