--- a/StewardClient/src/app/pages/tools/pages/notifications/components/notification-management/localized-group-notification-management/localized-group-notification-management.component.html
+++ b/StewardClient/src/app/pages/tools/pages/notifications/components/notification-management/localized-group-notification-management/localized-group-notification-management.component.html
@@ -37,26 +37,26 @@
           <td mat-cell *matCellDef="let entry" [formGroup]="entry.formGroup">
             <table class="info-table">
               <tr *ngIf="!entry.edit">
-                <th>ID:</th>
+                <th>ID</th>
                 <td>
                   {{ entry.notification.notificationId }}
                 </td>
               </tr>
               <tr *ngIf="!entry.edit">
-                <th>Type:</th>
+                <th>Type</th>
                 <td>
                   {{ entry.notification.notificationType }}
                 </td>
               </tr>
               <tr *ngIf="!entry.edit">
-                <th>Sent Date:</th>
+                <th>Sent Date</th>
                 <td>
                   <standard-absolute-time-utc [timeUtc]="entry.notification.sentDateUtc">
                   </standard-absolute-time-utc>
                 </td>
               </tr>
               <tr *ngIf="!entry.edit">
-                <th>Expire Date:</th>
+                <th>Expire Date</th>
                 <td>
                   <standard-absolute-time-utc
                     *ngIf="!entry.edit"
@@ -66,7 +66,7 @@
                 </td>
               </tr>
               <tr *ngIf="!entry.edit">
-                <th>Device Type:</th>
+                <th>Device Type</th>
                 <td>
                   {{ entry.formGroup.controls.deviceType.value | deppoh }}
                 </td>
