--- a/StewardClient/src/app/shared/modules/endpoints/endpoints-nav-tool/endpoints-nav-tool.component.html
+++ b/StewardClient/src/app/shared/modules/endpoints/endpoints-nav-tool/endpoints-nav-tool.component.html
@@ -9,10 +9,25 @@
       <div *ngFor="let entry of line.entries" [ngClass]="entry.classes"></div>
     </div>
   </div>
-  <span class="label">{{ item.title }}</span>
+  <span class="label" [matTooltip]="item.tooltipDescription" >{{ item.title }}</span>
 </div>
 </button>
 <mat-menu #quickOptions>
+  <div class="menu-header">
+    <div class="toggle-group">
+      <label>Forza Motorsport</label>
+      <mat-button-toggle-group [(ngModel)]="steelheadEndpointKey" (ngModelChange)="setSteelheadEndpoint($event)">
+        <mat-button-toggle *ngFor="let key of steelheadEndpointKeyList" [value]="key">{{key}}</mat-button-toggle>
+      </mat-button-toggle-group>
+    </div>
+    <div class="toggle-group">
+      <label>Forza Horizon 5</label>
+      <mat-button-toggle-group [(ngModel)]="woodstockEndpointKey" (ngModelChange)="setWoodstockEndpoint($event)">
+        <mat-button-toggle *ngFor="let key of woodstockEndpointKeyList" [value]="key">{{key}}</mat-button-toggle>
+      </mat-button-toggle-group>
+    </div>
+  </div>
+  <hr />
   <a *ngFor="let optionSet of quickEndpointOptions" [matTooltip]="optionSet.tooltip" matTooltipPosition="right"
     (click)="setAllEndpoints(optionSet)" mat-menu-item [disabled]="!optionSet.isPossible">
     <mat-icon>{{ optionSet.icon ?? '' }}</mat-icon>{{ optionSet.name }}
