--- a/StewardClient/src/app/shared/modules/endpoints/endpoints-nav-tool/endpoints-nav-tool.component.scss
+++ b/StewardClient/src/app/shared/modules/endpoints/endpoints-nav-tool/endpoints-nav-tool.component.scss
@@ -43,3 +43,16 @@
     }
   }
 }
+
+.menu-header {
+  display: flex;
+  flex-flow: column wrap;
+  align-items: center;
+  padding: 0 .5em;
+  > .toggle-group {
+    padding: .5em;
+    label {
+      display: block;
+    }
+  }
+}
