--- a/StewardClient/src/app/shared/modules/endpoints/endpoints-nav-tool/endpoints-nav-tool.component.scss
+++ b/StewardClient/src/app/shared/modules/endpoints/endpoints-nav-tool/endpoints-nav-tool.component.scss
@@ -1,3 +1,5 @@
+@import '/src/styles/mixins';
+
 :host {
   display: flex;
 }
@@ -9,7 +11,7 @@
 }
 
 .label {
-  padding-left: .5em;
+  padding-left: 0.5em;
 }
 
 .summary {
@@ -18,27 +20,27 @@
     flex-flow: row nowrap;
     justify-content: flex-start;
   }
-  
+
   .entry {
     border: 1px solid transparent;
-    margin: .5px;
+    margin: 0.5px;
     width: 5px;
     height: 5px;
-    background-color: #fff5;
+    background-color: app-color-default-contrast($app-primary, 0.3);
 
     &.spacer {
-      background-color: #0000;
+      background-color: transparent;
     }
 
     &.active {
-      background-color: white;
+      background-color: app-color-default-contrast($app-primary);
 
       &.retail {
-        background-color: lime;
+        background-color: app-color-default($app-success);
       }
 
       &.flight {
-        background-color: cyan;
+        background-color: app-color-default($app-accent);
       }
     }
   }
@@ -48,9 +50,9 @@
   display: flex;
   flex-flow: column wrap;
   align-items: center;
-  padding: 0 .5em;
+  padding: 0 0.5em;
   > .toggle-group {
-    padding: .5em;
+    padding: 0.5em;
     label {
       display: block;
     }
