--- a/StewardClient/src/app/pages/tools/pages/notifications/components/notification-management/localized-individual-notification-management/localized-individual-notification-management.component.html
+++ b/StewardClient/src/app/pages/tools/pages/notifications/components/notification-management/localized-individual-notification-management/localized-individual-notification-management.component.html
@@ -10,13 +10,13 @@
     <mat-paginator [pageSize]="10" [pageSizeOptions]="[5, 10, 25]" showFirstLastButtons>
     </mat-paginator>
     <form *waitForMonitor="getMonitor" class="sf-wrapper">
-      <table mat-table [dataSource]="notifications">
+      <table class="sf-full-width" mat-table [dataSource]="notifications">
         <ng-container matColumnDef="message">
           <th mat-header-cell *matHeaderCellDef>Message</th>
           <td mat-cell *matCellDef="let entry" [formGroup]="entry.formGroup">
             <div class="sf-full-width" *ngIf="!entry.edit">
               <span *ngIf="entry.isEditable">{{ entry.notification.message }} </span>
-              <span class="warn" *ngIf="!entry.isEditable">
+              <span class="sf-text-warn" *ngIf="!entry.isEditable">
                 No message for notifications of type:
                 {{ entry.notification.notificationType }}
               </span>
