--- a/StewardClient/src/app/pages/tools/pages/notifications/steelhead/steelhead-notifications.component.html
+++ b/StewardClient/src/app/pages/tools/pages/notifications/steelhead/steelhead-notifications.component.html
@@ -33,7 +33,9 @@
       (selectedTabChange)="viewSelectionTypeChange($event.index)"
     >
       <mat-tab label="Create">
-        <create-localized-string [service]="localizationCreationServiceContract"></create-localized-string>
+        <create-localized-string
+          [service]="localizationCreationServiceContract"
+        ></create-localized-string>
       </mat-tab>
       <mat-tab label="Send">
         <localized-messaging
