--- a/StewardClient/src/styles/global/steward-layout/standard-form.scss
+++ b/StewardClient/src/styles/global/steward-layout/standard-form.scss
@@ -104,6 +104,14 @@
     flex-grow: 1;
     flex-shrink: 1;
   }
+
+  table.sf-full-width {
+    width: 100%;
+
+    .mat-cell {
+      padding: 1em;
+    }
+  }
 }
 
 .sf-header.sf-header.sf-header {
