--- a/StewardClient/src/app/shared/modules/endpoints/endpoints-nav-tool/endpoints-nav-tool.component.scss
+++ b/StewardClient/src/app/shared/modules/endpoints/endpoints-nav-tool/endpoints-nav-tool.component.scss
@@ -1,5 +1,8 @@
 @import '/src/styles/mixins';
 
+$tile-size: 5px;
+$tile-gap-size: 1px;
+
 :host {
   display: flex;
 }
@@ -23,9 +26,9 @@
 
   .entry {
     border: 1px solid transparent;
-    margin: 0.5px;
-    width: 5px;
-    height: 5px;
+    margin: $tile-gap-size / 2;
+    width: $tile-size;
+    height: $tile-size;
     background-color: app-color-default-contrast($app-primary, 0.3);
 
     &.spacer {
