--- a/StewardClient/src/app/pages/tools/pages/notifications/components/notification-management/localized-group-notification-management/localized-group-notification-management.component.html
+++ b/StewardClient/src/app/pages/tools/pages/notifications/components/notification-management/localized-group-notification-management/localized-group-notification-management.component.html
@@ -147,6 +147,10 @@
                 color="primary"
                 (click)="revertEntryEdit(entry)"
                 matTooltip="Cancel entry edit"
+                stateManager
+                [monitor]="entry.postMonitor"
+                [waitOnMonitors]="entry.postMonitor"
+                monitorDisable
               >
                 Undo
               </button>
