--- a/StewardClient/src/app/pages/tools/pages/notifications/components/notification-management/localized-individual-notification-management/localized-individual-notification-management.component.html
+++ b/StewardClient/src/app/pages/tools/pages/notifications/components/notification-management/localized-individual-notification-management/localized-individual-notification-management.component.html
@@ -137,6 +137,10 @@
                 color="primary"
                 (click)="revertEntryEdit(entry)"
                 matTooltip="Cancel entry edit"
+                stateManager
+                [monitor]="entry.postMonitor"
+                [waitOnMonitors]="entry.postMonitor"
+                monitorDisable
               >
                 Undo
               </button>
