--- a/StewardClient/src/app/shared/modules/endpoints/endpoints-nav-tool/endpoints-nav-tool.component.html
+++ b/StewardClient/src/app/shared/modules/endpoints/endpoints-nav-tool/endpoints-nav-tool.component.html
@@ -16,23 +16,31 @@
     cardSubtitle="Navbar widget"
     confluenceName="current-endpoints-navbar-widget"
   >
+    <p>The colored tiles on the left of this widget summarize the currently selected endpoints.</p>
     <p>
-      The colored tiles on the left of this widget summarize the currently selected endpoints.
+      Each row represents a title's endpoints. Hovering over the tiles shows a summary of the
+      current endpoints. This order matches the order of the tile rows.
     </p>
     <p>
-      Each row represents a title's endpoints.
-      Hovering over the tiles shows a summary of the current endpoints.
-      This order matches the order of the tile rows.
-    </p>
-    <p>
-      The smaller tiles represent endpoints.
-      Each column is a single type of endpoint (Retail, Studio, Flight, etc).
+      The smaller tiles represent endpoints. Each column is a single type of endpoint (Retail,
+      Studio, Flight, etc).
     </p>
     <ul class="sf-no-bullet">
-      <li><span class="inline-summary"><span class="entry active retail"></span></span> a selected Retail endpoint</li>
-      <li><span class="inline-summary"><span class="entry active"></span></span> a selected Studio endpoint</li>
-      <li><span class="inline-summary"><span class="entry active flight"></span></span> a selected Flight endpoint</li>
-      <li><span class="inline-summary"><span class="entry"></span></span> endpoint is not selected</li>
+      <li>
+        <span class="inline-summary"><span class="entry active retail"></span></span> a selected
+        Retail endpoint
+      </li>
+      <li>
+        <span class="inline-summary"><span class="entry active"></span></span> a selected Studio
+        endpoint
+      </li>
+      <li>
+        <span class="inline-summary"><span class="entry active flight"></span></span> a selected
+        Flight endpoint
+      </li>
+      <li>
+        <span class="inline-summary"><span class="entry"></span></span> endpoint is not selected
+      </li>
     </ul>
   </help-popover-icon>
   <div class="menu-header">
